--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="jumbotron text-center text-primary">
         <h1><span class="fa fa-github"></span> Github OAuth</h1>
         <p>Authorize your app with:</p>
-        <a href="https://github.com/login/oauth/authorize?client_id=<%= client_id %>" class="btn btn-danger"><span class="fa fa-github"></span> Github Login</a>
+        <a href="https://github.com/login/oauth/authorize?client_id=06ac5be7de47e24d883e&client_secret=cba0481b3507c3a655a74328d496f609c1852b9f" class="btn btn-danger"><span class="fa fa-github"></span> Github Login</a>
     </div>
 </div>
 </body>
