--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <!doctype html>
 <html>
 <head>
-    <title>Github Oauth</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- load bulma css -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- load fontawesome -->
-    <style>
-        body        { padding-top:70px; }
-    </style>
+    <title>GitHub Oauth</title>
 </head>
 <body>
-<div class="container">
-    <div class="jumbotron text-center text-primary">
-        <h1><span class="fa fa-github"></span> Github OAuth</h1>
-        <p>Authorize your app with:</p>
-        <a href="https://github.com/login/oauth/authorize?client_id=06ac5be7de47e24d883e&client_secret=cba0481b3507c3a655a74328d496f609c1852b9f" class="btn btn-danger"><span class="fa fa-github"></span> Github Login</a>
-    </div>
-</div>
+    <h1><span class="fa fa-github"></span> Github OAuth</h1>
+    <p>Authorize your app with:</p>
+    <form action="https://github.com/login/oauth/authorize" method="get">
+        <input type="hidden" name="client_id" value="06ac5be7de47e24d883e">
+        <input type="hidden" name="client_secret" value="cba0481b3507c3a655a74328d496f609c1852b9f">
+        <button type="submit">Login With GitHub</button>
+    </form>
 </body>
 </html> 
