--- a/success.html
+++ b/success.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Github integration successful</p>
+    <p>GitHub integration successful</p>
 </body>
 </html>
