--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>GitHub Oauth</title>
 </head>
 <body>
-    <h1><span class="fa fa-github"></span> Github OAuth</h1>
+    <h1> GitHub OAuth</h1>
     <p>Authorize your app with:</p>
     <form action="https://github.com/login/oauth/authorize" method="get">
         <input type="hidden" name="client_id" value="06ac5be7de47e24d883e">
