--- a/success.html
+++ b/success.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<script>
+    function f() {
+        alert('We are here')
+        console.log(window.location.href)
+    }
+
+</script>
+<body onload="f()">
     <p>GitHub integration successful</p>
 </body>
+
 </html>
