--- a/success.html
+++ b/success.html
@@ -14,7 +14,8 @@
                 method: 'POST',
                 headers: {
                     'Accept': 'application/json',
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'Access-Control-Allow-Origin' : '*'
                 },
                 body: JSON.stringify({
                     'client_id' : '06ac5be7de47e24d883e',
