--- a/success.html
+++ b/success.html
@@ -8,21 +8,36 @@
 
     <script>
         function f() {
-            let code = window.location.href.slice(window.location.href.indexOf('=')+1)
+            let url = window.location.href
+            console.log(url)
+
+            if (url.includes('code')){
+                // Generate code button
+
+            }
+            else{
+                // Display Access token
+                document.getElementById('button').style.display = 'none'
+                document.querySelector('#access_code') = url
+            }
+
             document.querySelector('#code').value = code
         }
     
     </script>
 
 </head>
-<body>
+<body onload="f()">
     <p>GitHub integration successful</p>
+
+    <p id="access_token"></p>
+
     <form action="https://github.com/login/oauth/access_token" method="post">
         <input type="hidden" name="client_id" value="06ac5be7de47e24d883e">
         <input type="hidden" name="client_secret" value="cba0481b3507c3a655a74328d496f609c1852b9f">
         <input type="hidden" name="code" id="code">
-        <input type="hidden" name="redirect_uri" value="https://jordanfalkbbd.github.io/access_token.html">
-        <button type="submit">Get Access Token</button>
+        <input type="hidden" name="redirect_uri" value="https://jordanfalkbbd.github.io/success.html">
+        <button type="submit" id="button">Get Access Token</button>
     </form>
 </body>
 
