--- a/success.html
+++ b/success.html
@@ -10,7 +10,8 @@
         function f() {
             let url = window.location.href
             console.log(url)
-            let code = url.charAt(url.indexOf('=') + 1)
+            let code = url.slice(url.indexOf('=') + 1)
+            console.log(code)
 
             if (url.includes('code')){
                 // Generate code button
