--- a/success.html
+++ b/success.html
@@ -27,7 +27,13 @@
 
             document.forms['form1'].addEventListener( 'submit', (event) => {
                     event.preventDefault();
-                    console.log(event);
+                    
+                    fetch(event.target.action, {
+                        method: 'POST',
+                        body: new URLSearchParams(new FormData(event.target))
+                    }).then((response) => {
+                        console.log(response)
+                    })
                 }
             )
         }
